--- a/envs/dev.yaml
+++ b/envs/dev.yaml
@@ -1,1 +1,25 @@
 replicaCount: 3
+
+image:
+  repository: us-central1-docker.pkg.dev/terraform-project-august-mike/artemis/artemis
+  tag: "1.0.0"
+
+service:
+  type: ClusterIP
+  port: 5000
+
+ingress:
+  enabled: true
+  annotations: {}
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: dev-artemis.mg-aws.com
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: 
+   - secretName: dev-artemis-tls
+     hosts:
+       - dev-artemis.mg-aws.com
+  
