--- a/envs/dev.yaml
+++ b/envs/dev.yaml
@@ -10,6 +10,7 @@ service:
 
 ingress:
   enabled: true
+  className: "nginx"
   annotations: 
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
