--- a/envs/dev.yaml
+++ b/envs/dev.yaml
@@ -12,17 +12,18 @@ service:
 ingress:
   enabled: true
   className: "nginx"
+  annotations: 
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     ingress.kubernetes.io/ssl-redirect: "false"
     cert-manager.io/cluster-issuer: letsencrypt-prod
     acme.cert-manager.io/http01-edit-in-place: "true"
-    hosts:
-      - host: dev-artemis.mg-aws.com
-        paths:
-          - path: /
-            pathType: ImplementationSpecific
-    tls: 
-     - secretName: dev-artemis-tls
-       hosts:
-         - dev-artemis.mg-aws.com
+  hosts:
+    - host: dev-artemis.mg-aws.com
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: 
+   - secretName: dev-artemis-tls
+     hosts:
+       - dev-artemis.mg-aws.com
   
